My first react app on github

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Monirul-Islam80/react-app-one.git",
+  "homepage": "https://monirul-islam80.github.io/react-app-one/",
   "name": "projec-i",
   "version": "0.1.0",
   "private": true,
